# HTOC

./: .gitignore  LICENSE  README.md  _tql_chunks.txt  config.json  pyproject.toml  split_tql_4000.py
Python Files/: ARIMA.py  MitreDictionary.py  PROPHET.py
TC Playbook Exports/: noncdn_tagger.json  playbook.json  tagger.json
data/: data_path.json
data/MongoDB/: MongoDataTransfer.ipynb  ThreatAssessScoreTransfer.ipynb
data/ResearchDataQueries/: SOARExamples.csv  SOARIndicators.ipynb  no_attributes_partial.csv
data/indicator library/: indicator_library.json  indicators.csv
data/processed/: BingSearchData.json  CDC.csv  CMS.csv  DHA.csv  FDA.csv  HHS.csv  HRSA.csv  IHS.csv  MitreDictionary.json  NIH.csv  OS.csv  ProcessedObservedData.csv  VA.csv
data/raw/: Expanded_Cybersecurity_Dataset.csv  observation_data copy.csv
data/tracking/: alynforensics.csv
documentation/Models/: BingWebScraping.md  LSTM.md  NeuralNetworkPlayground.md
documentation/SOP/: SOP_Daily_Reports_Consolidation.md  SOP_HTOCThreatConnect_Package.md  SOP_NextObservedIndicator_Forecasting.md  SOP_PRISM_ThreatAssessmentScoring.md  SOP_TC_Playbook_GetCDNScanningIndicatorsByASN.md  SOP_TC_Playbook_GetKnownScanningIndicatorsByASN_NonCDN.md  SOP_Tipper_DailyIndicatorTips.md  _SOP_Format_Example_copy.docx  _docx_to_pdf_word_v7.py  build_docx_from_template.py  convert_to_pdf.py
notebooks/: ARIMA.ipynb  I  NeuralNetworkMultiStepForecasting.ipynb  SARIMA.ipynb  ThreatconnectGroupApi.ipynb  VAR.ipynb  WebScrapingProcess.ipynb
notebooks/AlynThreatConnect/: MANIFEST.in  README.md  ThreatConnect.py  __init__.py  pyproject.toml  test.ipynb
notebooks/AlynThreatConnect/AlynThreatConnect/: ThreatConnect.py  __init__.py  tc.conf
notebooks/AlynThreatConnect/alyn_threatconnect.egg-info/: PKG-INFO  SOURCES.txt
notebooks/BatchIndicatorUpdates/: POSTSoarIndicators.ipynb
notebooks/Exploration Notebooks/: Classification_muli_3D.ipynb  Coding.ipynb  LSTM.ipynb  MitreDictionary.ipynb  MitreTagging.ipynb  MongoDB.ipynb  Pytorch_Fundamentals.ipynb  ThreatConnectAPI.ipynb  temporalPlayground.ipynb
notebooks/HTOCThreatConnect/: LICENSE  MANIFEST.in  README.md  pyproject.toml  test.ipynb
notebooks/HTOCThreatConnect/HTOCThreatConnect/: ThreatConnect.py
notebooks/HTOCThreatConnect/HTOCThreatConnect.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
notebooks/HTOCThreatConnect/HTOC_threatconnect.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
notebooks/I&W Master Listing/: MasterListing.ipynb  frontEnd.ipynb
notebooks/I&W Reporting/: Bucket_I&W_Document_Generator.ipynb  HTOC-20250514-1347-A.docx  I&W Report Template.docx  I&W Report.docx  I&W_Document_Generator.ipynb  I&W_Generator.py  ~$W Report Template.docx  ~$W Report.docx  ~WRL3968.tmp
notebooks/Indicator Profile/: Dictionary.html  Profile_Backend.ipynb  Profile_UI.html  app.py  navigation.html  styles.css
notebooks/IsolatedTCPythonLibrary/: ThreatConnect.py  test.ipynb
notebooks/IsolatedTCPythonLibrary.ipynb/: FilterObject.py  Owners.py  RequestObject.py  Resource.py  ThreatConnect.py  tc.conf  test.ipynb
notebooks/Mitre/: MitreNLP.ipynb  WebScrapingProcess.ipynb
notebooks/Python Files/: BingSearchData.json  NeuralNetworkForecasting.ipynb  NeuralNetworkMultiStepForecasting.ipynb  WebScrapingProcess.ipynb  (+1 more)
scripts/: ObservationDataPull.ipynb
utils/: __init__.py  config.json  config_loader.py  path_utils.py
(+836 files in other folders)
