[build-system]
requires = ["setuptools>=68", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "alyn-threatconnect"
version = "0.1.1"                       # bump version
description = "Lightweight ThreatConnect client (GET-only) used internally"
readme = "README.md"                    # create this file; see below
requires-python = ">=3.9"
license = "MIT"                         # SPDX-style string (fixes warning)
authors = [{ name = "Your Name", email = "you@example.com" }]
dependencies = ["requests>=2.31.0", "pandas>=2.0.0", "pytz>=2023.3"]

[tool.setuptools]
packages = ["AlynThreatConnect"]        # the package name
package-dir = { "AlynThreatConnect" = "AlynThreatConnect" }
include-package-data = true

[tool.setuptools.package-data]
AlynThreatConnect = ["utils/config.json", "tc.conf"]
