[build-system]
requires = ["setuptools>=68", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "alyn-threatconnect"
version = "0.1.3"                     # bump version
description = "Lightweight ThreatConnect client (GET-only) used internally"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Jaytlin Askew", email = "jaytlin.askew@hhs.gov" }]
dependencies = ["requests>=2.31.0", "pandas>=2.0.0", "pytz>=2023.3"]

# Auto-discover AlynThreatConnect and its subpackages (e.g., AlynThreatConnect.utils)
[tool.setuptools.packages.find]
where = ["."]
include = ["AlynThreatConnect*"]

# Include non-Python data files
[tool.setuptools.package-data]
"AlynThreatConnect" = ["tc.conf"]
"AlynThreatConnect.utils" = ["config.json"]
